# limayrac-kahn-ia

./: cars.csv  pyproject.toml
src/limayrac_kahn_ia/: program.py
src/limayrac_kahn_ia/fuzzy_logic/: entities.py
