[project]
name = "limayrac-kahn-ia"
version = "0.1.0"
description = ""
authors = [
    {name = "Nicolas Metivier",email = "nicolas.a.metivier@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "limayrac_kahn_ia", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
