[project]
name = "limayrac-kahn-ia"
version = "0.1.0"
description = ""
authors = [
    {name = "Nicolas Metivier",email = "nicolas.a.metivier@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scikit-learn (>=1.7.2,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]

[tool.poetry]
packages = [{include = "limayrac_kahn_ia", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "limayrac_kahn_ia.program:main"